# pf_rendering_playground

./: .clang-format  CMakeLists.txt  README.md  config.toml  vcpkg.json
.PVS-Studio/: suppress_base.json
include/libassert/: assert.cpp  assert.hpp
include/ztd/: out_ptr.hpp
include/ztd/out_ptr/: inout_ptr.hpp  necessary_arity.hpp  pointer_of.hpp  version.hpp
include/ztd/out_ptr/detail/: base_inout_ptr_impl.hpp  base_out_ptr_impl.hpp  clever_inout_ptr.hpp  clever_inout_ptr_impl.hpp  clever_out_ptr_impl.hpp  customization_forward.hpp  inout_ptr_traits.hpp  integer_sequence.hpp  is_specialization_of.hpp  marker.hpp  out_ptr_traits.hpp  simple_inout_ptr.hpp  voidpp_op.hpp
src/: main.cpp
src/audio/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Device.cpp  Device.h  Listener.cpp  Listener.h  Source.cpp  Source.h  common.h
src/common_ui/controllers/: LogWindowController.cpp  LogWindowController.h
src/common_ui/models/: LogModel.h
src/common_ui/views/: LogWindowView.cpp  LogWindowView.h
src/geGL/: Program.cpp  Program.h
src/gpu/: Buffer.cpp  Buffer.h  ComputeShaderProgram.cpp  ComputeShaderProgram.h  GpuObject.h  Program.cpp  Program.h  RenderThread.cpp  RenderThread.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureTypes.h  Types.h  common.h  utils.h
src/gpu/opengl/: Buffer.cpp  Buffer.h  OpenGl.h  Program.cpp  Program.h  RenderThread.cpp  RenderThread.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/imgui/: ImGuiGlfwOpenGLInterface.cpp  ImGuiGlfwOpenGLInterface.h
src/imgui/impl/: imgui_impl_opengl3.cpp
src/log/: UISink.h
src/modes/: DummyMode.h  Mode.cpp  Mode.h  ModeManager.cpp  ModeManager.h
src/mvc/: Controller.h  Model.h  View.h  reactive.h
src/renderers/: ComputeToTextureRenderer.cpp  ComputeToTextureRenderer.h
src/shader_toy/: ShaderBuilder.cpp  ShaderBuilder.h  ShaderToyMode.cpp  ShaderToyMode.h  ShaderToyShaderBuilder.cpp  ShaderToyShaderBuilder.h  utils.h
src/shader_toy/controllers/: AudioAssetsController.cpp  AudioAssetsController.h  GlslEditorController.cpp  GlslEditorController.h  ImageAssetsController.cpp  ImageAssetsController.h  MainController.cpp  MainController.h  OutputController.cpp  OutputController.h  ShaderVariablesController.cpp  ShaderVariablesController.h
src/shader_toy/dialogs/: GlslLVariableInputDialog.cpp  GlslLVariableInputDialog.h
src/shader_toy/models/: AudioAssetsModel.cpp  AudioAssetsModel.h  GlslEditorModel.cpp  GlslEditorModel.h  ImageAssetModel.cpp  ImageAssetModel.h  MainModel.h  OutputModel.cpp  OutputModel.h  ShaderVariableModel.cpp  ShaderVariableModel.h
src/shader_toy/ui/: GlobalVariablesPanel.cpp  GlobalVariablesPanel.h  ImagesPanel.cpp  ImagesPanel.h  InputWindow.cpp  InputWindow.h  OutputWindow.cpp  OutputWindow.h  ShaderToyGlobalVariables.cpp  ShaderToyGlobalVariables.h  ShaderToyOutputWindow.cpp  ShaderToyOutputWindow.h  ShaderToyTextInputWindow.cpp  ShaderToyTextInputWindow.h  ShaderToyUI.cpp  ShaderToyUI.h  TEMP_MatrixDragInput.h  UI.cpp  UI.h
src/shader_toy/ui/dialogs/: GlslLVariableInputDialog.cpp  GlslLVariableInputDialog.h  ShaderToyGLSLVariableInputDialog.cpp  ShaderToyGLSLVariableInputDialog.h
src/shader_toy/views/: AudioAssetsView.cpp  AudioAssetsView.h  GlslEditorView.cpp  GlslEditorView.h  ImageAssetsView.cpp  ImageAssetsView.h  MainView.cpp  MainView.h  OutputView.cpp  OutputView.h  ShaderVariablesWindowView.cpp  ShaderVariablesWindowView.h
src/ui/: OutputWindow.cpp  OutputWindow.h  TextInputWindow.cpp  TextInputWindow.h  UI.cpp  UI.h
src/utils/: AudioLoader.cpp  AudioLoader.h  FPSCounter.cpp  FPSCounter.h  GlslToSpirv.cpp  GlslToSpirv.h  ImageLoader.cpp  ImageLoader.h  algorithms.h  enums.h  files.h  glsl_typenames.h  logging.h  opengl.h  opengl_utils.h  profiling.h  stb_image_impl.cpp
src/utils/glsl/: DefaultBuiltinResource.h  DirStackFileIncluder.cpp  DirStackFileIncluder.h  GlslToSpirv.cpp  GlslToSpirv.h  glsl_typenames.h
